manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
# deploy to usernode pool
metadata:
  name: ag4claims-deployment
  namespace: ag4claims-ns
  labels:
    app: ag4claims
spec:

  replicas: 1
  selector:
    matchLabels:
      app: ag4claims
  template:
    metadata:
      labels:
        app: ag4claims
    spec:
      
      containers:
      - name: ag4claims
        image: vhacr.azurecr.io/ag4claims:c49e545c3b2cbec32aad30e3696735e374b8cff7
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
              memory: "256Mi"
              cpu: "400m"
        ports:
        - containerPort: 3000
