manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entra-service
  namespace: default
  labels:
    app: entra
spec:
  type: ClusterIP
  selector:
    app: entra
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
