manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ag4claims-gateway
  namespace: claims-ns
  anatations:
    alb.networking.azure.io/alb-id: alb-nk
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: ag4claims-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  addresses:
  - type: alb.networking.azure.io/alb-frontend
    value: fe-nk
