manifests/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: claims-ns
spec:
  parentRefs:
  - name: ag4claims-gateway
  rules:
  - backendRefs:
    - name: ag4claims-service
      port: 80
