manifests/deny-all-polcy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: claims-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  # deny all ingress and egress traffic
  ingress: [] 
  egress: []
